2005-11-22 - standa
Calamus does all the clipping for the external driver on its own.
Remofing wrong wdwidth formulas from the aranym and calamus drivers.

2005-11-22 - johan
Fixed previously unknown bug in the dispatcher that crashed Calamus.
fVDI engine version bumped to 0.965beta.

2005-11-21 - johan
Modified version of Standa's Calamus support added.
Implemented vsm_string.

2005-11-17 - johan
Made it possible to force call to the fVDI mouse movement vector.
Fix for vbl handler install/remove.

2005-11-15 - johan
Fixed bug that made it impossible to do operations on non-fVDI handles
if running in standalone mode.
Partially implemented vq_devinfo.
Debug messages added for non-fVDI workstation open.
Made it possible to force VDI fallback (old VDI workstation open).

2005-11-09 - johan
The Atari character set is now mapped to Unicode for TrueType fonts.
Significant optimizations for TrueType rendering from cached bitmaps.
Check for other GDOS is now always done at startup.
Disabled vector font size debug code.

2005-09-24 - johan
The 16 bit driver can now be built using gcc.

2005-09-20 - johan
The ARAnyM driver now queries the host about the type of mouse cursor
handling to use, and informs the engine if the host takes care of moves.

2005-08-14 - johan
Some debug code addded to text functions to try to figure out what was
going wrong with the old vector font size limitation.
	
2005-08-12 - johan
Made it possible for C functions to call with separate stack.
Converted a bunch of text functions to C.

2005-08-10 - johan
All vq_extnd variants converted to C.

2005-08-09 - johan
All palette handling converted to C.

2005-08-04 - johan
Partial implementation of v_getbitmap_info.
Implemented vs_ctab and vdi<->index conversions.
Added text acceleration support to ARAnyM driver.

2005-08-02 - johan
Fixed problem with large number of open virtual workstations.
Fake implementations of a number of vector font functions.
Some bug fixes and minor improvements.
	